WIP: Adding test infrastructure
Setup repo for usual Sphinx location:
* content lives in doc/source
* Add tox.ini for building with linter and docs job
* Add jobs for Zuul

Change-Id: Ie7af4b6bd661e61180528cc1ecf3076e3e95590b

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,3 +1,10 @@
 - project:
     templates:
-      - noop-jobs
+      - build-openstack-docs-pti
+    check:
+      jobs:
+        - tox-linters
+    gate:
+      jobs:
+        - tox-linters
+        
