--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -1,3 +1,8 @@
 - project:
     templates:
-      - noop-jobs
+      - build-openstack-docs-pti
+    check:
+      jobs:
+        - tox-linters:
+            voting: false
+        
