Enable sphinx warnings
Tread warnings as errors - and fix all warnings.

Change-Id: I864fbc9cbe4a11c163505a10471dee869bcb1328

--- a/tox.ini
+++ b/tox.ini
@@ -18,5 +18,5 @@ commands =
 deps =
   -r{toxinidir}/test-requirements.txt
 commands =
-  sphinx-build -b html -d doc/build/doctrees doc/source doc/build/html
+  sphinx-build -W -b html -d doc/build/doctrees doc/source doc/build/html
 
